feat: add presenting data to spreadsheets

--- a/src/app/components/spreadsheet/spreadsheet.component.html
+++ b/src/app/components/spreadsheet/spreadsheet.component.html
@@ -1,1 +1,5 @@
-<div>Hello world</div>
+<div class="wrapper">
+  <h1 class="page-header">Built-in Spreadsheets Demo</h1>
+  <ejs-spreadsheet #spreadsheet (created)="onCreate()" [openUrl]="openUrl" [saveUrl]="saveUrl" allowOpen="true">
+  </ejs-spreadsheet>
+</div>
