--- a/src/app/components/spreadsheet/spreadsheet.component.css
+++ b/src/app/components/spreadsheet/spreadsheet.component.css
@@ -2,11 +2,62 @@
   height: 600px;
 }
 
+:host >>> .ng-select {
+  width: 200px;
+}
+
 .wrapper {
   padding: 20px;
-  margin-top: 40px;
 }
 
 .page-header {
   color: #008bff;
+}
+
+.save-template-wrapper {
+  display: flex;
+  gap: 10px;
+  width: 400px;
+  margin-bottom: 15px;
+}
+
+.tools {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.btn {
+  width: fit-content;
+  white-space: nowrap;
+  display: block;
+  border: none;
+  font-size: 15px;
+  font-weight: 400;
+  border-radius: 5px;
+  padding: 8px 14px;
+  margin-bottom: 5px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  transition: border 0.25s linear, color 0.25s linear, background-color 0.25s linear;
+  color: #212529;
+  background-color: #f8f9fa;
+  font-family: 'Arial', sans-serif;
+  line-height: 1.5;
+  user-select: none;
+  text-align: center;
+  cursor: pointer;
+}
+
+.btn:hover:disabled,
+.btn:disabled {
+  color: #212529;
+  background-color: #f8f9fa;
+  cursor: default;
+}
+
+.btn.active,
+.btn:hover {
+  color: #212529;
+  background-color: #e2e6ea;
+  border-color: #dae0e5;
 }
