fix: togglers description

--- a/src/app/components/spreadsheet/spreadsheet.component.html
+++ b/src/app/components/spreadsheet/spreadsheet.component.html
@@ -60,10 +60,10 @@
           (ngModel)="showRibbon"
           (change)="handleToggleRibbon()"
           [checked]="showRibbon"
-          id="hide-input"
+          id="hide-ribbon"
           type="checkbox"
         />
-        <label for="hide-input">Show ribbon visibility</label>
+        <label for="hide-ribbon">Show ribbon</label>
       </div>
 
       <div class="hide-wrapper">
@@ -71,10 +71,10 @@
           (ngModel)="showFormula"
           (change)="handleToggleFormula()"
           [checked]="showFormula"
-          id="hide-input"
+          id="hide-formula"
           type="checkbox"
         />
-        <label for="hide-input">Show formula visibility</label>
+        <label for="hide-formula">Show formula</label>
       </div>
     </div>
   </div>
