feat: add opening file with formulas

--- a/src/app/components/spreadsheet/spreadsheet.component.html
+++ b/src/app/components/spreadsheet/spreadsheet.component.html
@@ -83,6 +83,7 @@
     #spreadsheet
     (created)="onCreate()"
     [activeSheetIndex]="activeSheetIndex"
+    (openComplete)="onOpen()"
     [openUrl]="openUrl"
     [saveUrl]="saveUrl"
     allowOpen="true"
